--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -22,4 +22,9 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
       - name: Run Tests    
-        run: python -m unittest test_sim_metrics.py
+        run: python -m unittest test_sim_metrics.py 2> test_results.txt
+      - name: Export test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: test_results.txt
